--- a/linux/linux-apache2.html
+++ b/linux/linux-apache2.html
@@ -150,6 +150,15 @@ sudo find . -type f ! -perm 664 -exec chmod 664 {} \;
 6 110
 7 111</pre>
 
+<h2>Упарвление, параметры, настройки...</h2>
+<h3>Узнать количество работающих виртуальных хостов</h3>
+<pre>
+# ... -S например что-то из этого:
+httpd -S
+apachectl -S
+apache2 -S
+apache2ctl -S
+</pre>
 
 
 <h2>Ошибки</h2>
