--- a/linux/mint/all.html
+++ b/linux/mint/all.html
@@ -25,7 +25,7 @@
 					<h2>Параметры системы</h2>
 					<h3>Клавиатура</h3>
 					<h4>Комбинации клавишь</h4>
-					<p>Переназнач комбинации клавишь ctrl+alt+up, ctrl+alt+down для удобной работы в SublimeText3</p>
+					<p>Переназнач комбинации клавишь <kbd>ctrl+alt+up</kbd> (<kbd>alt+F1</kbd>), <kbd>ctrl+alt+down</kbd> (на <kbd>ctrl+alt+tab</kbd>) для удобной работы в SublimeText3</p>
 					<h2>Programms settings</h2>
 					<h3>Terminal</h3>
 					<ul>
