--- a/git/all.html
+++ b/git/all.html
@@ -33,6 +33,7 @@ git remote remove origin
 git remote add origin server:~/projectpath/
 git fetch origin master
 </pre>
+					<p>Такое ощущение что это не отмена а какая-то перезапись.</p>
 
 
 
