--- a/git/all.html
+++ b/git/all.html
@@ -33,6 +33,7 @@ git remote remove origin
 git remote add origin server:~/projectpath/
 git fetch origin master
 </pre>
+					<p>Так это не отмена, а перезапись. =(</p>
 
 
 
