--- a/yii2/all.html
+++ b/yii2/all.html
@@ -22,6 +22,22 @@
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<h1 class="text-center">Yii2 all</h1>
 					<div id="toc"></div>
+
+
+
+                    <h2>Dev or Prod</h2>
+                    <p>In <code>web/index.php</code>:</p>
+<pre class="prettyprint lang-php">
+/*
+defined('YII_DEBUG') or define('YII_DEBUG', true);
+defined('YII_ENV') or define('YII_ENV', 'dev');
+*/
+
+defined('YII_DEBUG') or define('YII_DEBUG', false);
+defined('YII_ENV') or define('YII_ENV', 'prod');
+</pre>
+                    <p>These changes affect the type of error.</p>
+
 					<h2>Model</h2>
 					<h3>Rules</h3>
 <pre class="prettyprint lang-php">
