--- a/php/all.html
+++ b/php/all.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>MySQL basic knowledge</title>
+		<title>PHP all</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,8 +20,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<h1 class="text-center">MySQL basic knowledge</h1>
+					<h1 class="text-center">PHP all</h1>
 					<div id="toc"></div>
+
+
+
 					<h2>php.ini</h2>
 <pre>
 upload_max_filesize = 10M
@@ -31,6 +34,13 @@ post_max_size = 210M
 <pre>
 sudo service apache2 restart
 </pre>
+					<h2>PHP in console</h2>
+<pre class="prettyprint lang-php">
+php -r 'echo &quot;Hello&quot; . &quot; world&quot;;'
+</pre>
+
+
+
 				</div>
 			</div>
 		</div>
