--- a/sql/all.html
+++ b/sql/all.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>MySQL basic knowledge</title>
+		<title>MySQL all</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,7 +20,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<h1 class="text-center">MySQL basic knowledge</h1>
+					<h1 class="text-center">MySQL all</h1>
 					<div id="toc"></div>
 					<h2>Типы данных</h2>
 					<h3>INT</h3>
@@ -90,6 +90,50 @@ UPDATE [LOW_PRIORITY] [IGNORE] tbl_name [, tbl_name ...]
 					<pre>mysql -hlocalhost -P3306 -Dwebhobru_yii -uroot -p -e "select * from user"</pre>
 					<pre>mysql -uroot -p -e "show databases"</pre>
 					<pre>mysql -uroot --password="" -Dwebhobru_yii -e "call buy_list(1)"</pre>
+
+
+					<h2>Administration</h2>
+					<h3>Viewing mysql users</h3>
+					<pre>SELECT User, Host FROM mysql.user;</pre>
+					<h3>Create user</h3>
+<pre class="prettyprint lang-sql">CREATE USER 'userLogin'@'localhost' IDENTIFIED BY 'userPassword';</pre>
+					<h3>Delete mysql user</h3>
+<pre class="prettyprint lang-sql">DROP USER 'userLogin'@'localhost';</pre>
+					<h3>Grant Permissions to a MySQL User on Linux via Command Line</h3>
+<pre class="prettyprint lang-sql">GRANT permission ON database.table TO 'userLogin'@'localhost';
+GRANT CREATE ON *.* TO 'userLogin'@'localhost';
+GRANT DROP ON testdatabase.* TO 'userLogin'@'localhost';
+</pre>
+					<p>Here is a short list of commonly used permissions:</p>
+					<ul>
+						<li>ALL – Allow complete access to a specific database. If a database is not specified, then allow complete access to the entirety of MySQL.</li>
+						<li>CREATE – Allow a user to create databases and tables.</li>
+						<li>DELETE – Allow a user to delete rows from a table.</li>
+						<li>DROP – Allow a user to drop databases and tables.</li>
+						<li>EXECUTE – Allow a user to execute stored routines.</li>
+						<li>GRANT OPTION – Allow a user to grant or remove another user’s privileges.</li>
+						<li>INSERT – Allow a user to insert rows from a table.</li>
+						<li>SELECT – Allow a user to select data from a database.</li>
+						<li>SHOW DATABASES- Allow a user to view a list of all databases.</li>
+						<li>UPDATE – Allow a user to update rows in a table.</li>
+					</ul>
+					<h3>FLUSH!</h3>
+					<p>When finished making your permission changes, it’s good practice to reload all the privileges with the flush command!</p>
+<pre class="prettyprint lang-sql">FLUSH PRIVILEGES;</pre>
+					<h3>Viewing permissions</h3>
+<pre class="prettyprint lang-sql">
+-- for a logged user:
+SHOW GRANTS;
+-- and for the specified user:
+SHOW GRANTS FOR 'userLogin'@'localhost';
+</pre>
+					<h3>Remove permission</h3>
+<pre class="prettyprint lang-sql">REVOKE <mark>permission</mark> ON database.table FROM 'user'@'localhost';</pre>
+<pre class="prettyprint lang-sql">REVOKE CREATE ON <mark>*.*</mark> FROM 'testuser'@'localhost';</pre>
+<pre class="prettyprint lang-sql">REVOKE DROP ON <mark>tutorial_database.*</mark> FROM 'testuser'@'localhost';</pre>
+					<p>Do not forget <mark>FLUSH</mark>!</p>
+<pre class="prettyprint lang-sql">FLUSH PRIVILEGES;</pre>
+
 					<h2>Ошибки</h2>
 					<h3>1175. You are using safe update mode and you tried to update a table without a WHERE that uses a KEY column To disable safe mode, toggle the option in Preferences</h3>
 <pre class="prettyprint lang-sql">
