--- a/git/all.html
+++ b/git/all.html
@@ -35,7 +35,10 @@ git fetch origin master
 </pre>
 					<p>Такое ощущение что это не отмена а какая-то перезапись.</p>
 
-
+					<h2>Ветки</h2>
+					<h3>Запушить ветку в бар</h3>
+<pre class="prettyprint lang-bsh">git push -u origin local</pre>
+					<p>это отправляет ветку local в удаленный репозиторий и автоматом делает нашу локальную ветку local отслеживаемой с origin/local :)</p>
 
 
 
