--- a/php/all.html
+++ b/php/all.html
@@ -31,14 +31,18 @@ upload_max_filesize = 10M
 max_file_uploads = 20
 post_max_size = 210M
 </pre>
-<pre>
-sudo service apache2 restart
-</pre>
+<pre>sudo service apache2 restart</pre>
+
+
 					<h2>PHP in console</h2>
 <pre class="prettyprint lang-php">
 php -r 'echo &quot;Hello&quot; . &quot; world&quot;;'
 </pre>
 
+
+					<h2>Комментирование</h2>
+<pre>&lt;!-- html  --&gt;&lt;?php // echo 'asd'; ?&gt;&lt;!--  html --&gt;
+&lt;!-- html  --&gt;&lt;?php //= 'asd'; ?&gt;&lt;!--  html --&gt;</pre>
 
 
 				</div>
