--- a/js/all.html
+++ b/js/all.html
@@ -200,10 +200,20 @@ $( "#foo" ).get( 0 ); // Identical to above, only slower.
 $( event.target );
 </pre>
 
+					<h2>Плагины</h2>
 
+					<h3>Подсветка синтаксиса кода google-code-prettify</h3>
+<p><del><code class="prettyprint lang-html">&lt;script src=&quot;https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js&quot;&gt;&lt;/script&gt;</code></del></p>
+<p><code class="prettyprint lang-html">&lt;script src=&quot;https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js&quot;&gt;&lt;/script&gt;</code></p>
+<p>Встраиваемые в &lt;pre&gt;/&lt;code&gt; классы:</p>
 
-
-
+<pre class="prettyprint lang-css"> class=&quot;prettyprint lang-html&quot;
+ class=&quot;prettyprint lang-css&quot;
+ class=&quot;prettyprint lang-js&quot;
+ class=&quot;prettyprint lang-php&quot;
+ class=&quot;prettyprint lang-apache&quot;
+ class=&quot;prettyprint lang-sh&quot;
+ class=&quot;prettyprint lang-sql&quot;</pre>
 
 
 
