--- a/bash/all.html
+++ b/bash/all.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Document</title>
+		<!-- Favicon -->
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body>
 
