--- a/sass/all.html
+++ b/sass/all.html
@@ -5,7 +5,13 @@
 	<title>SASS all</title>
 </head>
 <body>
-	
+
+
+<h2>install package</h2>
+<ul>
+	<li><code>sudo apt-get install bootstrap-sass</code></li>
+	<li><code>sudo apt-get install sass</code></li>
+</ul>
 
 <h2>simply start</h2>
 <p>
