--- a/phpbb3/all.html
+++ b/phpbb3/all.html
@@ -25,6 +25,32 @@
 					<h1 class="text-center">PHP all</h1>
 					<div id="toc"></div>
 
+					<h2>Файловая структура</h2>
+
+<pre>
+adm/           = админка
+assets/
+bin/
+cache/
+config/
+docs/
+documentation/ = своя документация
+download/
+ext/
+files/
+images/
+includes/
+install-/      = инсталяция и конвертация из другой версии
+language/
+phpbb/
+store/
+styles/        = стили (темы)
+test/
+vendor/
+</pre>
+
+
+
 
 					<h2>БД</h2>
 					<h3>Подтверждение пользователя ручками в БД</h3>
